# sokr-plugins

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Plans.md  README.md  TODO.md
.github/workflows/: ci.yml
benches/: RESULTS.md  cpu_roundtrip.rs
crates/sokr-cpu/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md
crates/sokr-cpu/benches/: cpu_roundtrip.rs
crates/sokr-cpu/examples/: cpu_end_to_end.rs  test_capability.rs
crates/sokr-cpu/src/: lib.rs
crates/sokr-cpu/tests/: plugin_contract.rs  sokr_cpu_tests.rs  test_1_2_roundtrip.rs  test_1_3_destroy.rs  test_1_4_integration.rs
crates/sokr-dispatch-first/: CHANGELOG.md  Cargo.toml  README.md
crates/sokr-dispatch-first/src/: lib.rs
