[workspace]
members = [
    "crates/sokr-cpu",
    "crates/sokr-dispatch-first",
]
resolver = "2"

[workspace.dependencies]
# Use local sokr for integration testing; publishes as crates.io version
sokr = { path = "../sokr", version = "0.3" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "unwind"
