[workspace]
members = [
    "crates/sokr-cpu",
    "crates/sokr-dispatch-first",
]
resolver = "2"

[workspace.dependencies]
# default-features off so plugins can opt into a no_std `sokr`; std-using
# crates re-enable it through their own `std` feature (`sokr/std`).
sokr = { version = "0.3", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "unwind"
