[package]
name = "sokr-cpu"
version = "0.1.0"
edition = "2021"
description = "Synchronous CPU substrate plugin for SOKR compute abstraction framework"
license = "MIT OR Apache-2.0"
authors = ["The SOKR Project"]
repository = "https://github.com/sokr-rs/sokr-plugins"
homepage = "https://github.com/sokr-rs/sokr-plugins"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
sokr = { workspace = true }

[dev-dependencies]
