[package]
name = "sokr-cpu"
version = "0.2.0"
edition = "2021"
description = "Synchronous CPU substrate plugin for SOKR compute abstraction framework"
license = "MIT OR Apache-2.0"
authors = ["The SOKR Project"]
repository = "https://github.com/sokr-rs/sokr-plugins"
homepage = "https://github.com/sokr-rs/sokr-plugins"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
# `std` is opt-out: the plugin itself uses only `core`, but it is enabled by
# default so the std-based tests, example, and benchmark build normally.
# Build the bare no_std plugin with `--no-default-features`.
std = ["sokr/std"]

[dependencies]
sokr = { workspace = true }

[[bench]]
name = "cpu_roundtrip"
harness = false
