[package]
name = "sokr-dispatch-first"
version = "0.1.1"
edition = "2021"
description = "First-capable dispatch policy for SOKR substrate selection"
license = "MIT OR Apache-2.0"
authors = ["The SOKR Project"]
repository = "https://github.com/sokr-rs/sokr-plugins"
homepage = "https://github.com/sokr-rs/sokr-plugins"

[lib]
crate-type = ["rlib"]

[dependencies]

[dev-dependencies]
